PARQUET-764: Support batches for PLAIN boolean writes that aren't a multiple of 8